Bug 106511 - radv: MSAA broken on SI (assertion failure in vkCreateImage)
Summary: radv: MSAA broken on SI (assertion failure in vkCreateImage)
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Vulkan/radeon (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-05-14 09:41 UTC by Turo Lamminen
Modified: 2018-05-23 00:24 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Full backtrace (4.47 KB, text/plain)
2018-05-14 09:41 UTC, Turo Lamminen
Details

Description Turo Lamminen 2018-05-14 09:41:32 UTC
Created attachment 139553 [details]
Full backtrace

vkCreateImage (multisample 2 samples) crashes with: 

addrlib/r800/siaddrlib.cpp:2972: virtual int Addr::V1::SiLib::HwlPostCheckTileIndex(const ADDR_TILEINFO*, AddrTileMode, AddrTileType, INT) const: Assertion `index < static_cast<int>(m_noOfEntries)' failed.

Mesa git, LLVM 6.0, kernel 4.16.5, Pitcairn.

Bisected to:

9bf3570fed064cfc5a863fa4bd4802f11b1030f5 is the first bad commit
commit 9bf3570fed064cfc5a863fa4bd4802f11b1030f5
Author: Marek Olšák <marek.olsak@amd.com>
Date:   Mon Apr 30 20:54:06 2018 -0400

    ac/surface/gfx6: compute FMASK together with the color surface
    
    instead of invoking FMASK computation separately.
    
    Reviewed-by: Nicolai Hähnle <nicolai.haehnle@amd.com>

:040000 040000 c941c8936a3b10389b78a29551e131e6f3190bab eeb1d994575864eb0f4c09fd4c532d40990582ad M	src
Comment 1 Turo Lamminen 2018-05-18 11:49:23 UTC
More info:

2x and 4x crash but 8x works.

When the assertion fails, index and m_noOfEntries are both 32.
Comment 2 Bas Nieuwenhuizen 2018-05-21 14:42:45 UTC
This should be fixed with

https://patchwork.freedesktop.org/patch/224584/
Comment 3 Turo Lamminen 2018-05-22 08:48:41 UTC
That patch works.

Tested-by: Turo Lamminen <turo@alternativegames.net>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.